Updated settings and gitignore, added function for import the crl list

--- a/settings.ini
+++ b/settings.ini
@@ -1,20 +1,28 @@
 [Folders]
-certs=certs/
-crls=crls/
-tmp=temp/
-assests=assests/
+certs = certs/
+crls = crls/
+tmp = temp/
+assests = assests/
 
 [MainWindow]
-width=1200
-height=400
+width = 1200
+height = 600
 
 [Bd]
-type=sqlite3
-name=cert_crl.db
+type = sqlite3
+name = cert_crl.db
 
 [Socket]
-timeout=15
+timeout = 15
+
+[Listing]
+# Колличество отображаемых данных
+uc=500
+crl=500
+cert=500
+watch=500
 
 [Style]
-Window=Fusion
-### 'windowsvista', 'Windows', 'Fusion'
+# windowsvista, Windows, Fusion
+window = Fusion
+
