Restructuring all code, updated ui and bd scheme, added backup function, add exceptions.

--- a/settings.ini
+++ b/settings.ini
@@ -7,13 +7,15 @@ assests = assests/
 [MainWindow]
 width = 1200
 height = 600
+saveWidth=No
+AllowResize=Yes
 
 [Bd]
 type = sqlite3
 name = cert_crl.db
 
 [Socket]
-timeout = 15
+timeout = No
 
 [Listing]
 # Колличество отображаемых данных
@@ -24,5 +26,43 @@ watch=500
 
 [Style]
 # windowsvista, Windows, Fusion
-window = Fusion
+window=Fusion
+extendetColorInfo=No
+
+[Proxy]
+proxyOn=No
+ip=
+port=
+login=
+password=
+
+[Update]
+priority=custom
+advancedChecking=Yes
+viewingCRLlastNextUpdate=Yes
+
+[Backup]
+backUPbyStart=Yes
+
+[Tabs]
+ucLimit=500
+ucAllowDelete=No
+crlLimit=500
+crlAllowDelete=No
+certLimit=500
+certAllowDelete=No
+wcLimit=500
+wcAllowDelete=No
+wccLimit=500
+wccAllowDelete=No
+wcdLimit=500
+wcdAllowDelete=No
+
+[Schedule]
+allowSchedule=No
+weekUpdate=All
+timeUpdate=9:00, 12:00, 16:00
+allowUpdateTSLbyStart=No
+allowUpdateCRLbyStart=No
+
 
