--- a/settings.ini
+++ b/settings.ini
@@ -61,8 +61,9 @@ wcdAllowDelete=No
 [Schedule]
 allowSchedule=No
 weekUpdate=All
-timeUpdate=9:00, 12:00, 16:00
+timeUpdate=9:00; 12:00; 16:00
 allowUpdateTSLbyStart=No
 allowUpdateCRLbyStart=No
+rangeUpdateCRL=5day
 
 
