Added log function.

--- a/settings.ini
+++ b/settings.ini
@@ -67,4 +67,10 @@ allowUpdateTSLbyStart=No
 allowUpdateCRLbyStart=No
 rangeUpdateCRL=5day
 
+[Sec]
+allowImportCRL=No
+allowExportCRL=No
+allowDeleteWatchingCRL=Yes
+allowDownloadBottomCRL=Yes
+allowCheckBottomCRL=Yes
 
