Updated UI and updated timer for watching CRL's

--- a/settings.ini
+++ b/settings.ini
@@ -62,10 +62,13 @@ wcdAllowDelete=No
 [Schedule]
 allowSchedule=No
 weekUpdate=All
-timeUpdate=9:00; 12:00; 16:00
+#S ,M ,H, D
+timeUpdate=10M
+periodUpdate=9:00; 12:00; 16:00
 allowUpdateTSLbyStart=No
 allowUpdateCRLbyStart=No
 rangeUpdateCRL=5day
+
 
 [Sec]
 allowImportCRL=No
