--- a/settings.ini
+++ b/settings.ini
@@ -2,7 +2,7 @@
 certs=certs/
 crls=crls/
 tmp=temp/
-assests=assests/
+logs=logs/
 to_uc=uc/
 
 [MainWindow]
@@ -74,6 +74,6 @@ rangeUpdateCRL=5day
 allowImportCRL=No
 allowExportCRL=No
 allowDeleteWatchingCRL=Yes
-allowDownloadBottomCRL=Yes
-allowCheckBottomCRL=Yes
+allowDownloadButtonCRL=Yes
+allowCheckButtonCRL=Yes
 
