Cleanup code and added save function

--- a/settings.ini
+++ b/settings.ini
@@ -1,79 +1,75 @@
 [Folders]
 certs=certs/
 crls=crls/
-tmp=temp/
+tmp=tmp/
 logs=logs/
 to_uc=uc/
 
 [MainWindow]
-width = 1200
-height = 600
-saveWidth=No
-AllowResize=Yes
+width=1200
+height=600
+savewidth=No
+allowresize=Yes
 
 [Bd]
 type=sqlite3
 name=cert_crl.db
 
 [Socket]
-timeout = No
+timeout=No
 
 [Listing]
-# Колличество отображаемых данных
 uc=500
 crl=500
 cert=500
 watch=500
 
 [Style]
-# windowsvista, Windows, Fusion
 window=Fusion
-extendetColorInfo=No
+extendetcolorinfo=No
 
 [Proxy]
-proxyOn=No
-ip=
-port=
+proxyon=Yes
+ip=http://10.2.248.50
+port=8080
 login=
 password=
 
 [Update]
 priority=custom
-advancedChecking=Yes
-viewingCRLlastNextUpdate=Yes
+advancedchecking=No
+viewingcrllastnextupdate=No
 
 [Backup]
-backUPbyStart=Yes
+backupbystart=Yes
 
 [Tabs]
-ucLimit=500
-ucAllowDelete=No
-crlLimit=500
-crlAllowDelete=No
-certLimit=500
-certAllowDelete=No
-wcLimit=500
-wcAllowDelete=No
-wccLimit=500
-wccAllowDelete=No
-wcdLimit=500
-wcdAllowDelete=No
+uclimit=500
+ucallowdelete=No
+crllimit=500
+crlallowdelete=No
+certlimit=500
+certallowdelete=No
+wclimit=500
+wcallowdelete=No
+wcclimit=500
+wccallowdelete=No
+wcdlimit=500
+wcdallowdelete=No
 
 [Schedule]
-allowSchedule=No
-weekUpdate=All
-#S ,M ,H, D
-timeUpdate=10M
-periodUpdate=9:00; 12:00; 16:00
-allowUpdateTSLbyStart=No
-allowUpdateCRLbyStart=No
-rangeUpdateCRL=5day
-
+allowschedule=No
+weekupdate=All
+timeupdate=1M
+periodupdate=9:00; 12:00; 16:00
+allowupdatetslbystart=No
+allowupdatecrlbystart=No
+rangeupdatecrl=5day
 
 [Sec]
-allowImportCRL=No
-allowExportCRL=No
-allowDeleteWatchingCRL=Yes
-allowDownloadButtonCRL=Yes
-allowCheckButtonCRL=Yes
+allowimportcrl=No
+allowexportcrl=No
+allowdeletewatchingcrl=Yes
+allowdownloadbuttoncrl=Yes
+allowcheckbuttoncrl=Yes
 
