--- a/settings.ini
+++ b/settings.ini
@@ -1,8 +1,8 @@
 [Folders]
-certs=certs/
-crls=crls/
-tmp=tmp/
-logs=logs/
+certs=crls/
+crls=certs/
+tmp=uc/
+logs=tmp/
 to_uc=uc/
 
 [MainWindow]
@@ -29,7 +29,7 @@ window=Fusion
 extendetcolorinfo=No
 
 [Proxy]
-proxyon=Yes
+proxyon=No
 ip=http://10.2.248.50
 port=8080
 login=
