Updated UI and mini fix

--- a/settings.ini
+++ b/settings.ini
@@ -3,13 +3,14 @@ certs=certs/
 crls=crls/
 tmp=tmp/
 logs=logs/
-to_uc=uc/
+to_uc=to_uc/
+uc=uc/
 
 [MainWindow]
-width=1200
-height=600
+width=1100
+height=650
 savewidth=No
-allowresize=Yes
+allowresize=No
 
 [Bd]
 type=sqlite3
@@ -30,7 +31,7 @@ extendetcolorinfo=No
 
 [Proxy]
 proxyon=No
-ip=http://10.2.248.50
+ip=10.2.248.50
 port=8080
 login=
 password=
