Updated UI and added log system

--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,7 @@
 [Folders]
 certs=certs/
 crls=crls/
-tmp=tmp/
+tmp=temp/
 logs=logs/
 to_uc=to_uc/
 uc=uc/
@@ -9,7 +9,7 @@ uc=uc/
 [MainWindow]
 width=1100
 height=650
-savewidth=Yes
+savewidth=No
 allowresize=Yes
 
 [Bd]
@@ -39,7 +39,9 @@ password=
 [Update]
 priority=custom
 advancedchecking=No
-viewingcrllastnextupdate=No
+viewingcrllastnextupdate=Yes
+allowupdatecrlbystart=No
+allowupdatetslbystart=No
 
 [Backup]
 backupbystart=Yes
@@ -74,3 +76,20 @@ allowdeletewatchingcrl=Yes
 allowdownloadbuttoncrl=Yes
 allowcheckbuttoncrl=Yes
 
+[Logs]
+dividelogsbyday=Yes
+dividelogsbysize=1024
+loglevel=9
+
+[XMPP]
+server=
+login=
+password=
+tosend=
+sendinfoerr=No
+sendinfonewcrl=No
+sendinfonewtsl=No
+
+[Custom]
+main_uc_ogrn=1047702026701
+self_uc_ogrn=1020203227263
