--- a/settings.ini
+++ b/settings.ini
@@ -3,7 +3,7 @@ certs=certs/
 crls=crls/
 tmp=temp/
 logs=logs/
-to_uc=to_uc/
+to_uc=C:/Users/Saerus/PycharmProjects/E-TrustCRLparsing/to_uc
 uc=uc/
 
 [MainWindow]
@@ -30,7 +30,7 @@ window=Fusion
 extendetcolorinfo=No
 
 [Proxy]
-proxyon=No
+proxyon=Yes
 ip=10.2.248.50
 port=8080
 login=
@@ -93,3 +93,4 @@ sendinfonewtsl=No
 [Custom]
 main_uc_ogrn=1047702026701
 self_uc_ogrn=1020203227263
+
