The default configuration is set

--- a/settings.ini
+++ b/settings.ini
@@ -9,8 +9,8 @@ uc=uc/
 [MainWindow]
 width=1100
 height=650
-savewidth=No
-allowresize=Yes
+savewidth=Yes
+allowresize=No
 
 [Bd]
 type=sqlite3
@@ -30,7 +30,7 @@ window=Fusion
 extendetcolorinfo=No
 
 [Proxy]
-proxyon=Yes
+proxyon=No
 ip=10.2.248.50
 port=8080
 login=
