--- a/settings.ini
+++ b/settings.ini
@@ -42,6 +42,7 @@ advancedchecking=No
 viewingcrllastnextupdate=Yes
 allowupdatecrlbystart=No
 allowupdatetslbystart=No
+deltaupdateinday=10
 
 [Backup]
 backupbystart=Yes
