Added settings parameters

--- a/settings.ini
+++ b/settings.ini
@@ -43,6 +43,9 @@ viewingcrllastnextupdate=Yes
 allowupdatecrlbystart=No
 allowupdatetslbystart=No
 deltaupdateinday=10
+timebeforeupdate=20
+main_uc_ogrn=1047702026701
+self_uc_ogrn=1020203227263
 
 [Backup]
 backupbystart=Yes
