Restructuring code and moving classes to thread

--- a/settings.ini
+++ b/settings.ini
@@ -67,10 +67,11 @@ wcdallowdelete=No
 [Schedule]
 allowschedule=No
 weekupdate=All
-timeupdate=1M
+timeupdate=30S
 periodupdate=9:00; 12:00; 16:00
 allowupdatetslbystart=No
 allowupdatecrlbystart=No
+allowmonitoringcrlbystart=Yes
 rangeupdatecrl=5day
 
 [Sec]
