--- a/settings.ini
+++ b/settings.ini
@@ -3,14 +3,14 @@ certs=certs/
 crls=crls/
 tmp=temp/
 logs=logs/
-to_uc=C:/Users/Saerus/PycharmProjects/E-TrustCRLparsing/to_uc
+to_uc=to_uc/
 uc=uc/
 
 [MainWindow]
 width=1100
 height=650
-savewidth=Yes
-allowresize=No
+savewidth=No
+allowresize=Yes
 
 [Bd]
 type=sqlite3
@@ -31,14 +31,14 @@ extendetcolorinfo=No
 
 [Proxy]
 proxyon=No
-ip=10.2.248.50
-port=8080
+ip=
+port=
 login=
 password=
 
 [Update]
 priority=custom
-advancedchecking=No
+advancedchecking=Yes
 viewingcrllastnextupdate=Yes
 allowupdatecrlbystart=No
 allowupdatetslbystart=No
@@ -67,7 +67,7 @@ wcdallowdelete=No
 [Schedule]
 allowschedule=No
 weekupdate=All
-timeupdate=30S
+timeupdate=10S
 periodupdate=9:00; 12:00; 16:00
 allowupdatetslbystart=No
 allowupdatecrlbystart=No
@@ -77,7 +77,7 @@ rangeupdatecrl=5day
 [Sec]
 allowimportcrl=No
 allowexportcrl=No
-allowdeletewatchingcrl=Yes
+allowdeletewatchingcrl=No
 allowdownloadbuttoncrl=Yes
 allowcheckbuttoncrl=Yes
 
