--- a/settings.ini
+++ b/settings.ini
@@ -68,7 +68,7 @@ wcdallowdelete=No
 allowschedule=No
 weekupdate=All
 timeupdate=10S
-periodupdate=9:00; 12:00; 16:00
+periodupdate=8h:20m:5m:5;24h:60m:10m:5;7d:6h:1h:10
 allowupdatetslbystart=No
 allowupdatecrlbystart=No
 allowmonitoringcrlbystart=No
